# livraria

./: db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py
livraria/: settings.py  urls.py
